[package]
name = "arroz"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"

# This is for creating drivers
bondrewd = { version = "0.1.14", default_features = false, features = ["derive"] }
embedded-registers = { version = "0.9.9", features = ["async"], git = "https://github.com/oddlama/embedded-registers.git"}
embedded-devices-derive = {git ="https://github.com/oddlama/embedded-devices.git"}
bytemuck = "1.18.0"

embedded-hal-async = "1.0.0"
maybe-async-cfg = "0.2.4"

[features]
async = []
default = ["async"]