[package]
name = "arroz"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"

# This is for creating drivers
bondrewd = { version = "0.1.14", default_features = false, features = ["derive"] }
embedded-registers = "0.9.9"
embedded-devices-derive = "0.9.9"
bytemuck = "1.18.0"

embedded-hal-async = "1.0.0"
maybe-async-cfg = "0.2.4"

#todo! For whatever reason to get embbedded devices derive to work
#  we neeed to import maybe-async-cfg and create a feature called "async"
[features]
async = []
default = ["async"]